fix layout shift

--- a/scss/layout/main-page/_join-section.scss
+++ b/scss/layout/main-page/_join-section.scss
@@ -24,6 +24,12 @@
                    top: 8rem;
                }
 
+               &-image {
+                   @include respond(mini-desktop) {
+                       height: 150vw;
+                   }
+               }
+
                &-bottom {}
            }
 
